--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,21 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   float: right;
 }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+.video-container iframe, .video-container object, .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* Previous-Next */
 .previous {
   background-color: #f1f1f1;
