--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,10 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   width: 100%;
   height: 100%;
 }
+.video-container video {
+  width: 100%  !important;
+  height: auto !important;
+}
 
 /* Previous-Next */
 .previous {
