--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /**
+
 * Template Name: MyPortfolio - v4.7.0
 * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
 * Author: BootstrapMade.com
@@ -8,9 +9,14 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 body {
-  font-family: "Inconsolata", monospace;
-  color: #0d1e2d;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  background-color: #1f242d;
 }
 
 a {
@@ -22,12 +28,27 @@ a:hover {
   color: #000;
 }
 
-h1, h2, h3, h4, h5, h6, .font-heading {
-  font-family: "Raleway", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.font-heading {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800px;
 }
 
 .section {
   padding: 7rem 0;
+}
+
+.container h2 {
+  font-size: 2.2rem;
+}
+
+.container h3 {
+  font-size: 1rem;
 }
 
 .filters a {
@@ -38,9 +59,13 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding-right: 10px;
   position: relative;
 }
-.filters a:hover, .filters a:focus, .filters a:active {
+
+.filters a:hover,
+.filters a:focus,
+.filters a:active {
   text-decoration: none;
 }
+
 .filters a:hover:before {
   content: "";
   position: absolute;
@@ -50,9 +75,11 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   height: 1px;
   background-color: #000;
 }
+
 .filters a.active {
   color: #000;
 }
+
 .filters a.active:before {
   content: "";
   position: absolute;
@@ -67,11 +94,13 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   border: none;
   margin-bottom: 30px;
 }
+
 .item .item-wrap {
   display: block;
   position: relative;
   overflow: hidden;
 }
+
 .item .item-wrap:after {
   z-index: 2;
   position: absolute;
@@ -85,11 +114,13 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   opacity: 0;
   transition: 0.3s all ease-in-out;
 }
+
 .item .item-wrap img {
   transition: 0.3s transform ease;
   transform: scale(1);
 }
-.item .item-wrap > .reel-info {
+
+.item .item-wrap>.reel-info {
   position: absolute;
   top: 50%;
   width: 100%;
@@ -102,16 +133,20 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   margin-top: 20px;
   transition: 0.3s all ease;
 }
-.item .item-wrap > .reel-info h3 {
+
+.item .item-wrap>.reel-info h3 {
   font-size: 30px;
   margin-bottom: 0;
 }
-.item .item-wrap > .reel-info span {
+
+
+.item .item-wrap>.reel-info span {
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
 }
-.item .item-wrap > .work-info {
+
+.item .item-wrap>.work-info {
   position: absolute;
   top: 50%;
   width: 100%;
@@ -124,56 +159,67 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   margin-top: 20px;
   transition: 0.3s all ease;
 }
-.item .item-wrap > .work-info h3 {
+
+.item .item-wrap>.work-info h3 {
   font-size: 20px;
   margin-bottom: 0;
 }
-.item .item-wrap > .work-info span {
+
+.item .item-wrap>.work-info span {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
 }
+
 .item .item-wrap:hover {
   text-decoration: none;
 }
+
 .item .item-wrap:hover img {
   transform: scale(1.05);
 }
+
 .item .item-wrap:hover:after {
   opacity: 1;
   visibility: visible;
 }
+
 .item .item-wrap:hover .reel-info {
   margin-top: 0px;
   opacity: 1;
   visibility: visible;
 }
+
 .item .item-wrap:hover .work-info {
   margin-top: 0px;
   opacity: 1;
   visibility: visible;
 }
 
+
 .testimonial-wrap {
   padding: 50px 50px 80px 50px;
-  background: #eceff2;
+  background: #323946;
 }
+
 .testimonial-wrap .testimonial {
   text-align: center;
   max-width: 500px;
   margin: 0 auto;
 }
+
 .testimonial-wrap .testimonial img {
   border-radius: 50%;
   width: 120px;
   margin: 0 auto 30px auto;
 }
+
 .testimonial-wrap .testimonial blockquote p {
   font-size: 20px;
 }
 
 .h3 {
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .h4 {
@@ -194,9 +240,13 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   transition: 0.2s all ease;
   font-weight: 700;
 }
-.readmore:active, .readmore:focus, .readmore:hover {
+
+.readmore:active,
+.readmore:focus,
+.readmore:hover {
   outline: none;
 }
+
 .readmore:hover {
   color: #fff;
   text-decoration: none;
@@ -207,12 +257,14 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   margin-top: -60px;
   position: relative;
 }
+
 .testimonials-slider .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: rgba(13, 30, 45, 0.3);
   opacity: 1;
 }
+
 .testimonials-slider .swiper-pagination .swiper-pagination-bullet-active {
   background-color: rgba(13, 30, 45, 0.6);
 }
@@ -229,6 +281,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   position: relative;
   padding-left: 30px;
 }
+
 .list-line li:before {
   content: "";
   position: absolute;
@@ -246,7 +299,9 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
 }
-.form-control:active, .form-control:focus {
+
+.form-control:active,
+.form-control:focus {
   background: #eff1f4;
   outline: none;
   box-shadow: none;
@@ -257,13 +312,15 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   height: 7px;
   border-radius: 0;
 }
+
 .custom-progress .progress-bar {
-  background: #000;
+  background: #0071bd;
 }
 
 .align-left {
   float: left;
 }
+
 .align-right {
   float: right;
 }
@@ -275,15 +332,19 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   height: 0;
   overflow: hidden;
 }
-.video-container iframe, .video-container object, .video-container embed {
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
+
 .video-container video {
-  width: 100%  !important;
+  width: 100% !important;
   height: auto !important;
 }
 
@@ -292,24 +353,26 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   background-color: #f1f1f1;
   border: none;
   color: black;
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
 }
+
 .next {
   background-color: royalblue;
   border: none;
   color: white;
-  padding: 20px;
+  padding: 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   margin: 4px 2px;
 }
+
 .round {
   border-radius: 2px;
 }
@@ -318,6 +381,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 .services i {
   font-size: 40px;
 }
+
 .services h4 {
   padding-top: 10px;
 }
@@ -331,9 +395,11 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding: 15px;
   font-weight: 600;
 }
-.php-email-form .error-message br + br {
+
+.php-email-form .error-message br+br {
   margin-top: 25px;
 }
+
 .php-email-form .sent-message {
   display: none;
   color: #fff;
@@ -342,12 +408,14 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding: 15px;
   font-weight: 600;
 }
+
 .php-email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
+
 .php-email-form .loading:before {
   content: "";
   display: inline-block;
@@ -365,6 +433,7 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -374,49 +443,62 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 /* Custom Navmenu */
 .custom-navmenu {
-  background: #0d1e2d;
+  background: black;
 }
-.custom-navmenu .custom-menu, .custom-navmenu .custom-menu li {
+
+.custom-navmenu .custom-menu,
+.custom-navmenu .custom-menu li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
+
 .custom-menu {
   float: right;
 }
+
 .custom-navmenu .custom-menu li {
   margin-bottom: 0;
   font-size: 20px;
 }
+
 .custom-navmenu .custom-menu li a {
   color: #fff;
   padding: 10px 0 !important;
 }
+
 .custom-navmenu .custom-menu li a:hover {
   text-decoration: none;
 }
+
 .custom-navmenu .custom-menu li.active a {
   text-decoration: underline;
 }
+
 .custom-navmenu h3 {
   font-size: 20px;
   color: #fff;
 }
+
 .custom-navmenu p {
   color: rgba(255, 255, 255, 0.6);
 }
+
 .custom-navmenu a {
   color: rgba(255, 255, 255, 0.7);
 }
+
 .custom-navmenu a:hover {
   color: #fff;
 }
@@ -426,18 +508,21 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   padding-top: 50px;
   width: 100%;
 }
+
 @media (max-width: 780px) {
-  .custom-navbar > .container {
+  .custom-navbar>.container {
     padding-right: 0;
     padding-left: 0;
   }
 }
+
 .custom-navbar .navbar-brand {
   font-size: 1.7rem;
   padding-right: 0;
   padding-left: 0;
   width: 75%;
 }
+
 @media (max-width: 780px) {
   .custom-navbar .navbar-brand {
     font-size: 1.7rem;
@@ -455,17 +540,20 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   position: relative;
 }
 
-.burger:before, .burger span, .burger:after {
+.burger:before,
+.burger span,
+.burger:after {
   width: 100%;
   height: 2px;
   display: block;
-  background: #000;
+  background: #0071bd;
   border-radius: 2px;
   position: absolute;
   opacity: 1;
 }
 
-.burger:before, .burger:after {
+.burger:before,
+.burger:after {
   transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
   -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
   content: "";
@@ -497,7 +585,8 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   opacity: 0;
 }
 
-.burger.active:before, .burger.active:after {
+.burger.active:before,
+.burger.active:after {
   top: 40%;
 }
 
@@ -513,26 +602,39 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   outline: none;
 }
 
+@media (max-width: 780px) {
+  .burger {
+    margin-right: 15px;
+  }
+}
+
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 .footer {
-  padding: 0 0 4rem 0;
+  padding: 0 0 2rem 0;
+  padding-top: 40px;
+  background-color: #000;
 }
+
 .footer a {
   color: #000;
 }
 
 .social a {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  background: #f8f9fa;
+  border: .2rem solid #0071bd;
+  background: transparent;
   position: relative;
   text-align: center;
-  color: #0d1e2d;
+  margin: 0.5rem 0.5rem 0.5rem 0;
+  color: #0071bd;
 }
+
 .social a span {
   display: inline-block;
   left: 50%;
@@ -540,6 +642,524 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
 .social a:hover {
-  color: #000;
+  background: #0071bd;
+  color: white;
+  box-shadow: 0 0 1rem #0071bd;
+}
+
+
+/* Changes Committed on 22-08-2023 */
+
+
+
+.tablink {
+  background-color: rgb(82, 80, 80);
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-style: bold;
+  font-family: 'Poppins', sans-serif;
+  padding: 14px 16px;
+  font-size: 1.1rem;
+  font-weight: 500px;
+  width: 33.33%;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+
+.tablink:hover {
+  background-color: #777;
+  opacity: 1;
+}
+
+
+.tabcontent {
+  color: #eceff2;
+  display: none;
+  padding-top: 100px;
+  padding: -10px;
+  height: 100%;
+  margin-top: -35px;
+}
+
+@media (max-width: 780px) {
+  .tabcontent {
+    font-size: 1rem;
+    padding-right: 0px;
+    margin-top: -70px;
+    padding-left: 0px;
+  }
+
+  .box {
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-bottom: -60px;
+  }
+}
+
+@media (max-width: 780px) {
+  .text {
+    font-size: 1rem;
+  }
+}
+
+
+#btn1 {
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+}
+
+#AI {
+  background-color: #323946;
+}
+
+#Animation {
+  background-color: #323946;
+}
+
+#Video {
+  background-color: #323946;
+}
+
+.row h3 {
+  font-size: 1.8rem;
+}
+
+.row strong {
+  font: 1.2rem;
+  font-weight: 500px;
+}
+
+
+.box .pic {
+  height: 25px;
+  width: 25px;
+}
+
+.box button {
+  font-size: 20px;
+}
+
+
+
+.list-unstyled li::before {
+  color: #0071bd;
+}
+
+@media (max-width: 780px) {
+  .list-unstyled {
+    list-style-type: none;
+  }
+}
+
+@media (max-width: 780px) {
+  .container .gap {
+    font-size: 1.8rem;
+    padding-right: 0;
+    margin-top: -50px;
+    padding-left: 15px;
+  }
+}
+
+@media (max-width: 780px) {
+  .navbar-brand {
+    margin-top: -40px;
+  }
+
+  .burger {
+    margin-top: -45px;
+  }
+}
+
+.navbar-brand {
+  margin-top: -30px;
+}
+
+.burger {
+  margin-top: -35px;
+}
+
+
+img.logo {
+  width: 12%;
+  height: auto;
+  display: block;
+  border-radius: 0px;
+}
+
+@media (max-width: 780px) {
+  img.logo {
+    width: 25%;
+    height: auto;
+    display: block;
+    border-radius: 0px;
+  }
+}
+
+@media (max-width: 780px) {
+  .footer .social a {
+    height: 30px;
+    width: 30px;
+    padding-top: 20px;
+    border: 0.1 rem solid #0071bd;
+    border-radius: 50%;
+    margin: 0.2rem 0.2rem 0.2rem 0;
+  }
+}
+
+.mb-1 {
+  font-size: 1rem;
+  color: #92969e;
+}
+
+@media (max-width: 780px) {
+  .mb-1 {
+    font-size: 0.8rem;
+    color: #92969e;
+  }
+}
+
+@media (max-width: 780px) {
+  .row1 {
+    font-size: 0.9rem;
+  }
+}
+
+@media (min-width: 780px) {
+  .container {
+    max-width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+@media (max-width: 780px) {
+  .test {
+    margin-left: 50px;
+  }
+}
+
+
+@media (max-width: 780px) {
+  .section p {
+    font-size: 0.9rem;
+  }
+
+  .container p {
+    font-size: 0.9rem;
+  }
+}
+
+.client-logo:hover {
+  color: white;
+  pointer-events: none;
+  cursor: not-allowed;
+}
+
+.col-md-3 {
+  margin-top: 10px;
+}
+
+.container .ani {
+  margin-bottom: -20px;
+}
+
+@media (max-width: 780px) {
+  .story {
+    margin-bottom: -25px;
+  }
+}
+
+@media (max-width: 780px) {
+  .site-section {
+    margin-bottom: -45px;
+  }
+}
+
+@media (max-width: 780px) {
+  .site-section {
+    margin-bottom: -45px;
+  }
+}
+
+
+@media (max-width: 780px) {
+  .storyboard {
+    display: none;
+  }
+}
+
+@media (min-width: 780px) {
+  .story_slider {
+    display: none;
+  }
+}
+
+
+
+
+/* Slider Section */
+
+.slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.slider {
+  width: 95%;
+  overflow: hidden;
+  position: relative;
+}
+
+.slide {
+  width: 100%;
+  display: none;
+}
+
+.slide img {
+  width: 100%;
+  height: auto;
+}
+
+/* Style the progress bar */
+.progress-container {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  position: relative;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  width: 0;
+  height: 100%;
+  background-color: blue;
+  transition: width 0.5s;
+  /* Adjust the animation duration as needed */
+}
+
+.s_head {
+  font-size: 1.8rem;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.s_design {
+  font-size: 1.8rem;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 40px;
+}
+
+
+@media (max-width: 780px) {
+  .space {
+    margin-top: -100px;
+  }
+
+  #portfolio-grid {
+    margin-top: -35px;
+  }
+}
+
+
+@media (max-width: 780px) {
+  .motion {
+    margin-top: 25px;
+    margin-left: -10px;
+    margin-right: -10px
+  }
+}
+
+.motion {
+  margin-top: 30px;
+}
+
+@media (max-width: 780px) {
+  .greet {
+    margin-top: 20px;
+  }
+}
+
+#soil {
+  margin-top: -15px;
+}
+
+
+#save_soil {
+  margin-top: 15px;
+}
+
+#video1 {
+  margin-top: 15px;
+}
+
+
+
+
+
+
+
+
+/* For AI Art Image Grid */
+
+.column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.post {
+  position: relative;
+  overflow: visible;
+  width: 100%;
+}
+
+img {
+  width: 100%;
+  border-radius: 5px;
+  height: 100%;
+}
+
+.alignment-container {
+  display: flex;
+  justify-content: space-between;
+  /* Spread content to the left and right */
+  align-items: center;
+  /* Center content vertically */
+  text-align: center;
+}
+
+.info-icon {
+  position: absolute;
+  bottom: 5px;
+  /* Adjust the position as needed, e.g., change 'bottom' to 'top' */
+  right: 10px;
+  /* Adjust the position as needed, e.g., change 'right' to 'left' */
+  cursor: pointer;
+  /* Change the cursor to a pointer to indicate interactivity */
+  font-size: 21px;
+  /* Adjust the font size to your desired size */
+}
+
+.info-popup {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  color: white;
+  padding: 10px;
+  max-width: 100%;
+  /* Ensure it's responsive */
+  max-height: 70vh;
+  /* Set a maximum height (adjust as needed) */
+  overflow-y: auto;
+  /* Enable vertical scrolling when content overflows */
+  display: none;
+  z-index: 9999;
+}
+
+.popup-section1 {
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  /*background-color: lightgreen;*/
+  padding-block: 5px;
+}
+
+.popup-section2 {
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+  /*background-color: lightcoral;*/
+  padding-block: 5px;
+}
+
+.popup-section3 {
+  float: right;
+  width: 50%;
+  box-sizing: border-box;
+  padding-top: 5px;
+  /*background-color: lightblue;*/
+}
+
+.popup-content {
+  background-color: #2D2F3C;
+  border-radius: 5px;
+  padding: 7px;
+  max-height: 20vh;
+  font-size: 15px;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  /* Set a maximum height (adjust as needed) */
+  overflow-y: auto;
+  /* Enable vertical scrolling when content overflows */
+}
+
+.popup-heading {
+  font-size: 18px;
+}
+
+.parameter {
+  background-color: #233549;
+  border-radius: 3px;
+  padding-inline: 3px;
+  display: inline;
+  color: lightblue;
+  font-size: 12px;
+  /* font-weight: bold; */
+}
+
+/* Define the container for the copy button */
+.copy-button {
+  display: inline-block;
+  position: relative;
+  padding: 3px;
+  background: rgba(0, 0, 0, 0);
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Create the copy icon shape */
+.copy-button::before {
+  content: "\f24d";
+  /* Unicode character for a copy icon */
+  font-family: FontAwesome;
+  font-size: 18px;
+  color: lightblue;
+}
+
+/* Add a tooltip for user guidance */
+.copy-done {
+  display: inline-block;
+  position: relative;
+  padding: 3px;
+  background: rgba(0, 0, 0, 0);
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.copy-done::before {
+  content: "\2713";
+  /* Unicode character for a check icon */
+  font-size: 18px;
+  color: lightgreen;
+}
+
+@media (max-width: 780px) {
+  .reel {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
