--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1119,10 +1119,10 @@ img {
 .parameter {
   background-color: #233549;
   border-radius: 3px;
-  /* padding-inline: 3px; */
+  padding-inline: 3px;
   display: inline;
   color: lightblue;
-  font-size: 12px;
+  font-size: 11px;
   /* font-weight: bold; */
 }
 
