--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,9 +371,9 @@ h6,
 }
 
 .previous :hover{
-  background-color: rgb(231, 64, 64);
+  background-color: rgb(231, 64, 64) !important;
   border: none;
-  color: white;
+  color: white !important;
   padding: 15px;
   text-align: center;
   text-decoration: none;
