--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,21 +375,10 @@ h6,
   margin: 4px 2px;
 }
 
-.previous a:hover{
-  background-color: rgb(231, 64, 64) !important;
-  color: white !important;
-}
-
-.gif_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-.gif {
+/* .gif {
   width: 650px;
   height: 6500px;
-}
+} */
 
 
 .next {
