--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,10 +352,33 @@ h6,
   height: 100%;
 }
 
-/* .video-container #rive_canvas{
-  width: 640 !important;
-  height: 564 !important;
-} */
+.video-container-rive {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+@media (min-width: 780px) {
+  .video-container-rive {
+    padding-top: 56.25%;
+    height: auto;
+  }
+}
+
+.rive_canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 
 .video-container video {
   width: 100% !important;
@@ -375,18 +398,23 @@ h6,
   margin: 4px 2px;
 }
 
-.gif {
-  display: block;
-  max-width: 80%; /* Ensures the image is responsive and maintains aspect ratio */
-  max-height: 80vh; /* Keeps the image within the viewport height */
-  margin: auto; /* Centers the image horizontally */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+/* #canvas{
+  width: ;
+  height: ;
+} */
+
+.gif{
+  margin-bottom: 10px;
 }
 
-
+@media (min-width: 780px) {
+  .gif {
+    max-width: 70%; 
+    max-height: 80vh;
+    position: relative;
+    margin: 0 auto 10px;
+  }
+}
 
 .next {
   background-color: royalblue;
