--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,8 +270,8 @@ h6,
 }
 
 
-@media (max-width:780px){
-  .testimonials-slider{
+@media (max-width:780px) {
+  .testimonials-slider {
     margin-left: -10px;
     margin-right: -10px;
   }
@@ -354,14 +354,25 @@ h6,
 
 .video-container-rive {
   position: relative;
-  width: 100%;
-  padding-top: 56.25%;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
 @media (min-width: 780px) {
   .video-container-rive {
-    padding-top: 56.25%;
-    height: auto;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 780px) {
+  .heading_rive{
+    margin-top: -20px;
   }
 }
 
@@ -387,9 +398,9 @@ h6,
 
 /* Previous-Next */
 .previous {
-  background-color: #f1f1f1;
+  background-color: #fa4159;
   border: none;
-  color: black;
+  color: white;
   padding: 15px;
   text-align: center;
   text-decoration: none;
@@ -403,18 +414,58 @@ h6,
   height: ;
 } */
 
-.gif{
+.gif {
   margin-bottom: 10px;
 }
 
 @media (min-width: 780px) {
+  /* .gif {
+    max-width: 70%; 
+    max-height: 80vh;
+    float: left;
+    margin-bottom: 10px;
+} */
+
+  .rive_cont {
+    display: flex;
+    align-items: flex-start; 
+  }
+
   .gif {
     max-width: 70%; 
     max-height: 80vh;
-    position: relative;
-    margin: 0 auto 10px;
+    margin-right: 15px; 
+  }
+
+  .head_sage {
+    flex: 1;
   }
 }
+
+.head_animation {
+  font-size: 10vw;
+  white-space: nowrap;
+}
+
+
+@media (max-width: 768px) {
+  .head_animation {
+      font-size: 8.5vw !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .head_animation {
+      font-size: 6vw;
+  }
+}
+
+@media (max-width: 400px) {
+  .head_animation {
+      font-size: 4vw;
+  }
+}
+
 
 .next {
   background-color: royalblue;
@@ -1220,6 +1271,6 @@ img {
   }
 }
 
-#test{
+#test {
   margin-top: -60px;
 }
