--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,7 @@ h6,
   height: 100%;
 }
 
-.video-container-rive {
+/* .video-container-rive {
   position: relative;
   padding-bottom: 56.25%;
   padding-top: 30px;
@@ -368,7 +368,7 @@ h6,
     height: 0;
     overflow: hidden;
   }
-}
+} */
 
 @media (min-width: 780px) {
   .heading_rive{
@@ -377,11 +377,9 @@ h6,
 }
 
 .rive_canvas {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 #canvas {
