--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,6 +377,9 @@ h6,
 }
 
 .rive_canvas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   top: 0;
   left: 0;
@@ -384,10 +387,23 @@ h6,
 
 #canvas {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
+@media (max-width: 780px) {
+  .rive_canvas {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
+  #canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+}
 
 .video-container video {
   width: 100% !important;
