--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ h6,
 
 .testimonial-wrap .testimonial {
   text-align: center;
-  max-width: 500px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -815,7 +815,7 @@ h6,
 }
 
 
-#btn1 {
+#defaultOpen {
   border-left: 2px solid white;
   border-right: 2px solid white;
 }
@@ -1274,3 +1274,42 @@ img {
 #test {
   margin-top: -60px;
 }
+
+.custom-container-animation img {
+  max-width: 100%;
+  display: block;
+}
+
+.custom-container-animation figure {
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+
+.custom-container-animation figure > img {
+  grid-row: 1 / -1;
+  grid-column: 1;
+}
+
+.custom-container-animation figure a {
+  color: black;
+  text-decoration: none;
+}
+
+.custom-container-animation figcaption {
+  grid-row: 2;
+  grid-column: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0.2em 0.5em;
+  justify-self: start;
+}
+
+.custom-container-animation {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: masonry;
+}
+
+
+/* New Changes */
