--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ h6,
 
 .item {
   border: none;
-  margin-bottom: 30px;
+  /* margin-bottom: 10px; */
 }
 
 .item .item-wrap {
@@ -156,7 +156,7 @@ h6,
   color: #fff;
   opacity: 0;
   visibility: hidden;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   transition: 0.3s all ease;
 }
 
@@ -191,7 +191,7 @@ h6,
 }
 
 .item .item-wrap:hover .work-info {
-  margin-top: 0px;
+  /* margin-top: 0px; */
   opacity: 1;
   visibility: visible;
 }
@@ -1018,7 +1018,7 @@ img.logo {
 }
 
 .slider {
-  width: 95%;
+  width: 100%;
   overflow: hidden;
   position: relative;
 }
