--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+
 body {
   font-family: 'Poppins', sans-serif;
   color: white;
@@ -1312,3 +1313,20 @@ img {
 
 
 /* New Changes */
+
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Main Content Styles */
+#main-content {
+  display: none; /* Hidden initially */
+}
