--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -835,6 +835,10 @@ h6,
   border-right: 2px solid white;
 }
 
+#design_tab1{
+  border-right: 2px solid white;
+}
+
 #AI {
   background-color: #323946;
 }
